--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -3,7 +3,7 @@ framework:
         # Unique name of your app: used to compute stable namespaces for cache keys.
         #prefix_seed: your_vendor_name/app_name
 
-        # The "app" cache stores to the filesystem by default.
+        # The "app" cache stores to the filesystem by pages.
         # The data in this cache should persist between deploys.
         # Other options include:
 
@@ -14,6 +14,6 @@ framework:
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
 
-        # Namespaced pools use the above "app" backend by default
+        # Namespaced pools use the above "app" backend by pages
         #pools:
             #my.dedicated.cache: null
