--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -12,7 +12,7 @@ framework:
                 retry_strategy:
                     max_retries: 3
                     multiplier: 2
-            failed: 'doctrine://default?queue_name=failed'
+            failed: 'doctrine://pages?queue_name=failed'
             # sync: 'sync://'
 
         routing:
