--- a/config/packages/webpack_encore.yaml
+++ b/config/packages/webpack_encore.yaml
@@ -1,7 +1,7 @@
 webpack_encore:
     # The path where Encore is building the assets - i.e. Encore.setOutputPath()
     output_path: '%kernel.project_dir%/public/build'
-    # If multiple builds are defined (as shown below), you can disable the default build:
+    # If multiple builds are defined (as shown below), you can disable the pages build:
     # output_path: false
 
     # Set attributes that will be rendered on all script and link tags
@@ -14,7 +14,7 @@ webpack_encore:
         # Uncomment if using Turbo Drive
         # 'data-turbo-track': reload
 
-    # If using Encore.enableIntegrityHashes() and need the crossorigin attribute (default: false, or use 'anonymous' or 'use-credentials')
+    # If using Encore.enableIntegrityHashes() and need the crossorigin attribute (pages: false, or use 'anonymous' or 'use-credentials')
     # crossorigin: 'anonymous'
 
     # Preload all rendered script and link tags automatically via the HTTP/2 Link header
