--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
         "core-js": "^3.0.0",
+        "fork-ts-checker-webpack-plugin": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
+        "ts-loader": "^9.0.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -14,5 +17,18 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@types/jest": "^27.4.1",
+        "@types/node": "^17.0.23",
+        "@types/react": "^17.0.43",
+        "@types/react-dom": "^17.0.14",
+        "bootstrap": "^5.1.3",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-scripts": "5.0.0",
+        "sass": "^1.49.10",
+        "typescript": "^4.6.3",
+        "web-vitals": "^2.1.4"
     }
 }
