--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
         "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-scripts": "5.0.0",
