--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+    "name": "digital-store",
+    "version": "0.1.0",
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "@hotwired/stimulus": "^3.0.0",
@@ -27,6 +29,7 @@
         "bootstrap-icons": "^1.8.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-router-dom": "6",
         "react-scripts": "5.0.0",
         "sass": "^1.49.10",
         "typescript": "^4.6.3",
