Added env variables

--- a/.env
+++ b/.env
@@ -45,3 +45,7 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###> App Version ###
 APP_VERSION='0.0.1'
 ###< App Version ###
+
+###> Project ###
+APP_NAME='Digital Store'
+###< Project ###
