--- a/.env
+++ b/.env
@@ -49,3 +49,9 @@ APP_VERSION='0.0.1'
 ###> Project ###
 APP_NAME='Digital Store'
 ###< Project ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=<ADD-HERE-YOUR-KEY>
+###< lexik/jwt-authentication-bundle ###
