--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,13 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            json_login:
+                # is a route we will create below
+                check_path: api_login
+                username_path: username
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -27,11 +34,16 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+        # See here all setup of JWT: https://github.com/lexik/LexikJWTAuthenticationBundle/blob/2.x/Resources/doc/index.md#getting-started
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: '^/api', roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
