--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@types/react-dom": "^17.0.14",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.8.1",
+        "classnames": "^2.3.1",
+        "prettier": "^2.6.2",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "6",
